Publish DeepSeek reproduction artifacts for review and presentation.
Consolidate the reproduction report (including one-invariant-per-LLM-call
semantics), add Beamer slides with Noto CJK build tooling, fix result
analysis scripts, and remove superseded note drafts so the notes index
points at a single canonical narrative.